[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "database-final"
description = "final for database project"
version = "0.1.0"
license = "MIT"
authors = []
repository = "https://github.com/mattwilkinsonn/database-final"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
sqlalchemy = "^1.4.7"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = {version = "^20.8b1", allow-prereleases = true}
sqlacodegen = "^2.3.0"
mysqlclient = "^2.0.3"
pymysql = "^1.0.2"
